fixtures/typescript/test-double/should_fail/fakeStore.ts
function createFakeStore() {
  return { items: [] };
}

const fakeStore = createFakeStore();
